--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/StepBarItemStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/StepBarItemStyle.axaml
@@ -4,13 +4,15 @@
     xmlns:lay="clr-namespace:LayUI.Avalonia.Controls;assembly=LayUI.Avalonia"
     xmlns:layCv="clr-namespace:LayUI.Avalonia.Converters;assembly=LayUI.Avalonia"
     xmlns:sys="clr-namespace:System;assembly=System.Runtime">
-
     <Design.PreviewWith>
-        <Border Padding="20">
-            <lay:LayStepBar>
-                <lay:LayStepBarItem Content="123123" Type="Executing" />
-                <lay:LayStepBarItem Content="123123" Type="Waiting" />
-                <lay:LayStepBarItem Content="123123" Type="Complete" />
+        <Border Width="553" Padding="20">
+            <lay:LayStepBar StepIndex="4">
+                <lay:LayStepBarItem Content="123123" />
+                <lay:LayStepBarItem Content="asd" />
+                <lay:LayStepBarItem Content="zxc" />
+                <lay:LayStepBarItem Content="rh" />
+                <lay:LayStepBarItem Content="hjk" />
+                <lay:LayStepBarItem Content="eeee" />
             </lay:LayStepBar>
         </Border>
     </Design.PreviewWith>
@@ -19,14 +21,17 @@
             <sys:Boolean x:Key="False">false</sys:Boolean>
             <sys:Boolean x:Key="True">true</sys:Boolean>
         </Style.Resources>
-        <Setter Property="BorderThickness" Value="2" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
+        <Setter Property="ClipToBounds" Value="false" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
                     <Grid RowDefinitions="auto,*">
                         <Grid ColumnDefinitions="*,auto,*">
-                            <Grid Height="2" Background="{TemplateBinding BorderBrush}">
+                            <Grid
+                                Name="PART_LeftLine"
+                                Height="1"
+                                Margin="-1,0">
                                 <Grid.IsVisible>
                                     <MultiBinding Converter="{x:Static layCv:StepBarItemConverter.Instance}" ConverterParameter="{StaticResource True}">
                                         <TemplateBinding Property="Index" />
@@ -37,11 +42,12 @@
                             <Grid
                                 Grid.Column="1"
                                 Width="30"
-                                Height="30">
+                                Height="30"
+                                ZIndex="1">
                                 <Border
                                     Background="{TemplateBinding Background}"
                                     BorderBrush="{TemplateBinding BorderBrush}"
-                                    BorderThickness="{TemplateBinding BorderThickness}"
+                                    BorderThickness="1"
                                     CornerRadius="15" />
                                 <ContentControl
                                     Name="PART_StepContent"
@@ -52,13 +58,20 @@
                                     Name="PART_Index"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center"
+                                    FontSize="16"
                                     Text="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=Index}" />
+                                <Path
+                                    Name="PART_Icon"
+                                    Margin="6,8"
+                                    Data="M770.775,0 C785.92503,0 801.07499,5.7750092 812.62498,17.325012 835.82499,40.425018 835.82499,77.925018 812.72501,101.02502 L352.22498,561.52502 310.425,603.32501 C298.87498,614.875 283.72498,620.64996 268.57499,620.65002 L268.55,620.64941 268.525,620.65002 C253.37501,620.64996 238.22501,614.875 226.62501,603.32501 L17.325012,394.02502 C-5.7750015,370.92499 -5.7750015,333.42499 17.325012,310.32501 40.424995,287.22501 77.924995,287.22501 101.025,310.32501 L268.47498,477.77502 728.92503,17.325012 C740.47501,5.7750092 755.62498,0 770.775,0 z"
+                                    Fill="{Binding #PART_Index.Foreground}"
+                                    Stretch="Fill" />
                             </Grid>
-
                             <Grid
+                                Name="PART_RightLine"
                                 Grid.Column="2"
-                                Height="2"
-                                Background="{TemplateBinding BorderBrush}">
+                                Height="1"
+                                Margin="-1,0">
                                 <Grid.IsVisible>
                                     <MultiBinding Converter="{x:Static layCv:StepBarItemConverter.Instance}" ConverterParameter="{StaticResource False}">
                                         <TemplateBinding Property="Index" />
@@ -79,23 +92,51 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <Style Selector="lay|LayStepBarItem/template/ Path#PART_Icon">
+        <Setter Property="IsVisible" Value="false" />
+    </Style>
     <Style Selector="lay|LayStepBarItem[Type=Waiting]">
         <Setter Property="Background" Value="Transparent" />
-        <Setter Property="BorderBrush" Value="{DynamicResource LightBlack}" />
+        <Setter Property="BorderBrush" Value="{DynamicResource Gray}" />
     </Style>
     <Style Selector="lay|LayStepBarItem[Type=Waiting] /template/ TextBlock#PART_Index">
-        <Setter Property="Foreground" Value="{DynamicResource LightBlack}" />
+        <Setter Property="Foreground" Value="{DynamicResource Gray}" />
+    </Style>
+    <Style Selector="lay|LayStepBarItem[Type=Waiting] /template/ Grid#PART_LeftLine">
+        <Setter Property="Background" Value="{DynamicResource Gray}" />
+    </Style>
+    <Style Selector="lay|LayStepBarItem[Type=Waiting] /template/ Grid#PART_RightLine">
+        <Setter Property="Background" Value="{DynamicResource Gray}" />
+    </Style>
+    <Style Selector="lay|LayStepBarItem[Type=Complete]/template/ TextBlock#PART_Index">
+        <Setter Property="IsVisible" Value="false" />
+        <Setter Property="Foreground" Value="White" />
+    </Style>
+    <Style Selector="lay|LayStepBarItem[Type=Complete]/template/ Path#PART_Icon">
+        <Setter Property="IsVisible" Value="true" />
     </Style>
     <Style Selector="lay|LayStepBarItem[Type=Complete]">
-        <Setter Property="Background" Value="Transparent" />
-        <Setter Property="BorderBrush" Value="{DynamicResource CyanGreen}" />
+        <Setter Property="Background" Value="{DynamicResource LightGreen}" />
+        <Setter Property="BorderBrush" Value="{DynamicResource LightGreen}" />
+    </Style>
+    <Style Selector="lay|LayStepBarItem[Type=Complete]/template/ Grid#PART_LeftLine">
+        <Setter Property="Background" Value="{DynamicResource LightGreen}" />
+    </Style>
+    <Style Selector="lay|LayStepBarItem[Type=Complete]/template/ Grid#PART_RightLine">
+        <Setter Property="Background" Value="{DynamicResource LightGreen}" />
     </Style>
     <Style Selector="lay|LayStepBarItem[Type=Executing]">
-        <Setter Property="Background" Value="Transparent" />
-        <Setter Property="BorderBrush" Value="{DynamicResource Blue}" />
+        <Setter Property="Background" Value="{DynamicResource LightGreen}" />
+        <Setter Property="BorderBrush" Value="{DynamicResource LightGreen}" />
+    </Style>
+    <Style Selector="lay|LayStepBarItem[Type=Executing]/template/ Grid#PART_LeftLine">
+        <Setter Property="Background" Value="{DynamicResource LightGreen}" />
+    </Style>
+    <Style Selector="lay|LayStepBarItem[Type=Executing]/template/ Grid#PART_RightLine">
+        <Setter Property="Background" Value="{DynamicResource Gray}" />
     </Style>
     <Style Selector="lay|LayStepBarItem[Type=Executing] /template/ TextBlock#PART_Index">
-        <Setter Property="Foreground" Value="{DynamicResource Blue}" />
+        <Setter Property="Foreground" Value="White" />
     </Style>
     <!--  Add Styles Here  -->
 </Styles>
