--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/CarouselStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/CarouselStyle.axaml
@@ -8,33 +8,14 @@
                 <lay:LayGradientCarousel
                     Width="300"
                     Height="200"
-                    Margin="5" />
-                <lay:LaySlideCarousel
-                    Width="300"
-                    Height="200"
-                    Margin="5" />
+                    Margin="5">
+                    <lay:LayCarouselItem />
+                    <lay:LayCarouselItem />
+                </lay:LayGradientCarousel>
             </StackPanel>
         </Border>
     </Design.PreviewWith>
-    <Style Selector="lay|LaySlideCarousel">
-        <Setter Property="CornerRadius" Value="2" />
-        <Setter Property="Background" Value="Red" />
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate>
-                    <Border
-                        Background="{TemplateBinding Background}"
-                        BorderBrush="{TemplateBinding BorderBrush}"
-                        BorderThickness="{TemplateBinding BorderThickness}"
-                        CornerRadius="{TemplateBinding CornerRadius}">
-                        <StackPanel Name="PART_ItemsGrid" Orientation="Horizontal" />
-                    </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
     <Style Selector="lay|LayGradientCarousel">
-        <Setter Property="Background" Value="Red" />
         <Setter Property="CornerRadius" Value="2" />
         <Setter Property="Template">
             <Setter.Value>
@@ -44,7 +25,53 @@
                         BorderBrush="{TemplateBinding BorderBrush}"
                         BorderThickness="{TemplateBinding BorderThickness}"
                         CornerRadius="{TemplateBinding CornerRadius}">
-                        <Grid Name="PART_ItemsGrid" />
+                        <Grid ColumnDefinitions="auto,*,auto">
+                            <Grid Name="PART_ItemsGrid" Grid.ColumnSpan="3" />
+                            <Button
+                                Width="36"
+                                Height="36"
+                                Margin="10,0"
+                                Command="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Previous}"
+                                Content="上一页">
+                                <Button.Template>
+                                    <ControlTemplate>
+                                        <Border
+                                            Background="{DynamicResource Gray}"
+                                            ClipToBounds="True"
+                                            CornerRadius="18">
+                                            <Path
+                                                Margin="10,8"
+                                                Data="M356.7 509.83L780.2 931.4c20 19.91 20 52.24 0 72.14-19.99 19.91-52.47 19.91-72.47 0L250.36 548.25c-10.57-10.53-15.67-24.6-14.9-38.42-0.64-13.82 4.33-27.89 14.9-38.42L707.6 16.12c20-19.9 52.48-19.9 72.47 0 20 19.91 20 52.24 0 72.14L356.7 509.83z m0 0"
+                                                Fill="White"
+                                                Stretch="Fill" />
+                                        </Border>
+                                    </ControlTemplate>
+                                </Button.Template>
+                            </Button>
+                            <Button
+                                Grid.Column="2"
+                                Width="36"
+                                Height="36"
+                                Margin="10,0"
+                                HorizontalAlignment="Right"
+                                Command="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Next}"
+                                Content="下一页">
+                                <Button.Template>
+                                    <ControlTemplate>
+                                        <Border
+                                            Background="{DynamicResource Gray}"
+                                            ClipToBounds="True"
+                                            CornerRadius="18">
+                                            <Path
+                                                Margin="10,8"
+                                                Data="M773.12 548.864c-0.512 3.584-1.024 7.168-2.048 10.752-2.048 9.216-7.168 17.408-13.312 24.064l-3.072 3.072-404.992 389.632c-12.8 12.288-27.136 18.432-45.056 17.408-31.232-1.024-56.832-28.672-54.272-58.368 1.024-14.336 7.68-26.624 17.92-36.864l364.544-350.208c1.024-1.024 2.048-1.536 4.096-3.584-2.048-1.024-3.584-1.536-4.608-2.56C510.464 425.472 389.12 308.224 267.264 191.488c-9.728-9.728-16.896-20.992-18.432-34.304 0-0.512-0.512-0.512-0.512-1.024v-11.776c0-0.512 0.512-1.024 0.512-2.048 3.584-22.016 19.456-39.424 41.984-45.056l8.704-2.048h12.288c0 0.512 0.512 0.512 1.024 0.512 14.336 1.536 26.112 8.192 35.84 18.432 26.112 25.6 52.736 50.688 79.36 76.288 108.032 103.936 216.064 208.384 324.608 312.32 6.144 5.632 11.264 12.288 13.824 19.968 2.56 7.168 4.608 14.336 6.656 21.504v4.608z"
+                                                Fill="White"
+                                                Stretch="Fill" />
+                                        </Border>
+                                    </ControlTemplate>
+                                </Button.Template>
+                            </Button>
+                        </Grid>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
