完成渐变轮播图功能以及样式

--- a/src/LayuiAvaloniaPack/Code/Layui.Main/Views/CarouselPage.axaml
+++ b/src/LayuiAvaloniaPack/Code/Layui.Main/Views/CarouselPage.axaml
@@ -16,7 +16,7 @@
                 Height="500"
                 Margin="5"
                 Items="{Binding Items}"
-                SelectedIndex="0">
+                SelectedIndex="{Binding SelectedIndex, Mode=TwoWay}">
                 <lay:LayGradientCarousel.ItemTemplate>
                     <DataTemplate>
                         <Grid Background="{DynamicResource Green}">
