--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/CarouselStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/CarouselStyle.axaml
@@ -9,7 +9,8 @@
                 <lay:LayGradientCarousel
                     Width="500"
                     Height="200"
-                    Background="Red">
+                    Background="Red"
+                    Type="Hover">
                     <lay:LayCarouselItem Content="123123" />
                     <lay:LayCarouselItem Content="adasdasd" />
                 </lay:LayGradientCarousel>
@@ -32,7 +33,7 @@
                                 Name="PART_Previous"
                                 Width="36"
                                 Height="36"
-                                Margin="10,0"
+                                Margin="10,0,0,0"
                                 Background="Black"
                                 Command="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Previous}"
                                 Content="上一页"
@@ -60,7 +61,7 @@
                                 Grid.Column="2"
                                 Width="36"
                                 Height="36"
-                                Margin="10,0"
+                                Margin="0,0,10,0"
                                 HorizontalAlignment="Right"
                                 Background="Black"
                                 Command="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Next}"
@@ -89,7 +90,8 @@
                                 Height="20"
                                 Margin="10"
                                 HorizontalAlignment="Center"
-                                VerticalAlignment="Bottom">
+                                VerticalAlignment="Bottom"
+                                IsVisible="{TemplateBinding IsIndicatorVisible}">
                                 <Border
                                     Padding="5"
                                     Background="Black"
@@ -98,7 +100,6 @@
                                 <ListBox
                                     Background="Transparent"
                                     BorderThickness="0"
-                                    IsHitTestVisible="false"
                                     Items="{Binding RelativeSource={RelativeSource AncestorType=lay:LayGradientCarousel}, Path=ItemsCount, Converter={x:Static layCv:ItemsCountToListConverter.Instance}}"
                                     SelectedIndex="{Binding RelativeSource={RelativeSource AncestorType=lay:LayGradientCarousel}, Path=SelectedIndex, Mode=OneWay}">
                                     <ListBox.ItemsPanel>
@@ -111,13 +112,22 @@
                                             <Setter Property="Template">
                                                 <Setter.Value>
                                                     <ControlTemplate>
-                                                        <Ellipse
-                                                            Name="PART_Ellipse"
-                                                            Width="10"
-                                                            Height="10"
-                                                            Margin="2,0"
-                                                            Cursor="Hand"
-                                                            Fill="White" />
+                                                        <Grid Cursor="Hand">
+                                                            <Ellipse
+                                                                Name="PART_Ellipse"
+                                                                Width="10"
+                                                                Height="10"
+                                                                Margin="2,0"
+                                                                Cursor="Hand"
+                                                                Fill="White" />
+                                                            <ContentPresenter
+                                                                Width="10"
+                                                                Height="10"
+                                                                Content="{TemplateBinding Content}"
+                                                                ContentTemplate="{TemplateBinding ContentTemplate}"
+                                                                Cursor="Hand"
+                                                                Opacity="0" />
+                                                        </Grid>
                                                     </ControlTemplate>
                                                 </Setter.Value>
                                             </Setter>
@@ -129,6 +139,16 @@
                                             <Setter Property="Opacity" Value="1" />
                                         </Style>
                                     </ListBox.Styles>
+                                    <ListBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <Button
+                                                HorizontalAlignment="Stretch"
+                                                VerticalAlignment="Stretch"
+                                                Command="{Binding RelativeSource={RelativeSource AncestorType=lay:LayGradientCarousel}, Path=SelectedItem}"
+                                                CommandParameter="{Binding .}"
+                                                Cursor="Hand" />
+                                        </DataTemplate>
+                                    </ListBox.ItemTemplate>
                                 </ListBox>
                             </Grid>
                         </Grid>
@@ -136,6 +156,58 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+    <Style Selector="lay|LayGradientCarousel/template/Button#PART_Previous">
+        <Setter Property="IsVisible" Value="false" />
+        <Setter Property="Opacity" Value="0" />
+    </Style>
+    <Style Selector="lay|LayGradientCarousel/template/Button#PART_Next">
+        <Setter Property="IsVisible" Value="false" />
+        <Setter Property="Opacity" Value="0" />
+    </Style>
+    <Style Selector="lay|LayGradientCarousel[Type=Always]/template/Button#PART_Previous">
+        <Setter Property="IsVisible" Value="true" />
+        <Setter Property="Opacity" Value="1" />
+    </Style>
+    <Style Selector="lay|LayGradientCarousel[Type=Always]/template/Button#PART_Next">
+        <Setter Property="IsVisible" Value="true" />
+        <Setter Property="Opacity" Value="1" />
+    </Style>
+    <Style Selector="lay|LayGradientCarousel[Type=None]/template/Button#PART_Previous">
+        <Setter Property="IsVisible" Value="false" />
+        <Setter Property="Opacity" Value="0" />
+    </Style>
+    <Style Selector="lay|LayGradientCarousel[Type=None]/template/Button#PART_Next">
+        <Setter Property="IsVisible" Value="false" />
+        <Setter Property="Opacity" Value="0" />
+    </Style>
+    <Style Selector="lay|LayGradientCarousel[Type=Hover]:pointerover/template/Button#PART_Previous">
+        <Setter Property="Transitions">
+            <Setter.Value>
+                <Transitions>
+                    <DoubleTransition
+                        Easing="CubicEaseInOut"
+                        Property="Opacity"
+                        Duration="0:0:0.3" />
+                </Transitions>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="IsVisible" Value="true" />
+        <Setter Property="Opacity" Value="1" />
+    </Style>
+    <Style Selector="lay|LayGradientCarousel[Type=Hover]:pointerover/template/Button#PART_Next">
+        <Setter Property="Transitions">
+            <Setter.Value>
+                <Transitions>
+                    <DoubleTransition
+                        Easing="CubicEaseInOut"
+                        Property="Opacity"
+                        Duration="0:0:0.3" />
+                </Transitions>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="IsVisible" Value="true" />
+        <Setter Property="Opacity" Value="1" />
     </Style>
     <Style Selector="lay|LayGradientCarousel/template/Button#PART_Previous/template/ Border#PART_Border">
         <Setter Property="Opacity" Value="0.2" />
