--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/CarouselStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/CarouselStyle.axaml
@@ -9,14 +9,45 @@
                 <lay:LayGradientCarousel
                     Width="500"
                     Height="200"
+                    Margin="10"
                     Background="Red"
                     Type="Hover">
                     <lay:LayCarouselItem Content="123123" />
                     <lay:LayCarouselItem Content="adasdasd" />
                 </lay:LayGradientCarousel>
+                <lay:LaySlideCarousel
+                    Width="500"
+                    Height="200"
+                    Margin="10" />
             </StackPanel>
         </Border>
     </Design.PreviewWith>
+    <Style Selector="lay|LaySlideCarousel">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Grid Name="PART_Grid" Width="300">
+                        <Grid Name="PART_ItemsGrid" Margin="{Binding ElementName=PART_Grid, Path=Bounds.Width, Converter={x:Static layCv:CarouselItemsGridMarginConverter.Instance}}">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto" />
+                                <ColumnDefinition Width="auto" />
+                                <ColumnDefinition Width="auto" />
+                            </Grid.ColumnDefinitions>
+                            <Grid Width="{Binding ElementName=PART_Grid, Path=Bounds.Width, Mode=OneWay}" Background="Red" />
+                            <Grid
+                                Grid.Column="1"
+                                Width="{Binding ElementName=PART_Grid, Path=Bounds.Width, Mode=OneWay}"
+                                Background="Black" />
+                            <Grid
+                                Grid.Column="2"
+                                Width="{Binding ElementName=PART_Grid, Path=Bounds.Width, Mode=OneWay}"
+                                Background="Bisque" />
+                        </Grid>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
     <Style Selector="lay|LayGradientCarousel">
         <Setter Property="CornerRadius" Value="2" />
         <Setter Property="Template">
