--- a/src/LayuiAvaloniaPack/Code/Layui.Main/Views/GroupBoxPage.axaml
+++ b/src/LayuiAvaloniaPack/Code/Layui.Main/Views/GroupBoxPage.axaml
@@ -9,8 +9,9 @@
     d:DesignWidth="800"
     Background="{DynamicResource LighGray}"
     mc:Ignorable="d">
+
     <UniformGrid Margin="10">
-        <lay:LayCard Margin="5">
+        <lay:LayCard Margin="5" Classes="anim zoom">
             <lay:LayGroupBox>
                 <lay:LayGroupBox.Header>
                     <TextBlock Text="标题" />
@@ -29,7 +30,7 @@
                 </StackPanel>
             </lay:LayGroupBox>
         </lay:LayCard>
-        <lay:LayCard Margin="5">
+        <lay:LayCard Margin="5" Classes="anim zoom">
             <lay:LayGroupBox>
                 <lay:LayGroupBox.Header>
                     <TextBlock Text="标题" />
@@ -48,7 +49,7 @@
                 </StackPanel>
             </lay:LayGroupBox>
         </lay:LayCard>
-        <lay:LayCard Margin="5">
+        <lay:LayCard Margin="5" Classes="anim zoom">
             <lay:LayGroupBox>
                 <lay:LayGroupBox.Header>
                     <TextBlock Text="标题" />
@@ -67,7 +68,7 @@
                 </StackPanel>
             </lay:LayGroupBox>
         </lay:LayCard>
-        <lay:LayCard Margin="5">
+        <lay:LayCard Margin="5" Classes="anim zoom">
             <lay:LayGroupBox>
                 <lay:LayGroupBox.Header>
                     <TextBlock Text="标题" />
@@ -86,7 +87,7 @@
                 </StackPanel>
             </lay:LayGroupBox>
         </lay:LayCard>
-        <lay:LayCard Margin="5">
+        <lay:LayCard Margin="5" Classes="anim zoom">
             <lay:LayGroupBox>
                 <lay:LayGroupBox.Header>
                     <TextBlock Text="标题" />
@@ -105,7 +106,64 @@
                 </StackPanel>
             </lay:LayGroupBox>
         </lay:LayCard>
-        <lay:LayCard Margin="5">
+        <lay:LayCard Margin="5" Classes="anim zoom">
+            <lay:LayGroupBox>
+                <lay:LayGroupBox.Header>
+                    <TextBlock Text="标题" />
+                </lay:LayGroupBox.Header>
+                <StackPanel Margin="10">
+                    <TextBlock
+                        Margin="2"
+                        Text="卡片式面板面板通常用于非白色背景色的主体内"
+                        TextTrimming="CharacterEllipsis"
+                        TextWrapping="WrapWithOverflow" />
+                    <TextBlock
+                        Margin="2"
+                        Text="从而映衬出边框投影"
+                        TextTrimming="CharacterEllipsis"
+                        TextWrapping="WrapWithOverflow" />
+                </StackPanel>
+            </lay:LayGroupBox>
+        </lay:LayCard>
+        <lay:LayCard Margin="5" Classes="anim zoom">
+            <lay:LayGroupBox>
+                <lay:LayGroupBox.Header>
+                    <TextBlock Text="标题" />
+                </lay:LayGroupBox.Header>
+                <StackPanel Margin="10">
+                    <TextBlock
+                        Margin="2"
+                        Text="卡片式面板面板通常用于非白色背景色的主体内"
+                        TextTrimming="CharacterEllipsis"
+                        TextWrapping="WrapWithOverflow" />
+                    <TextBlock
+                        Margin="2"
+                        Text="从而映衬出边框投影"
+                        TextTrimming="CharacterEllipsis"
+                        TextWrapping="WrapWithOverflow" />
+                </StackPanel>
+            </lay:LayGroupBox>
+        </lay:LayCard>
+        <lay:LayCard Margin="5" Classes="anim zoom">
+            <lay:LayGroupBox>
+                <lay:LayGroupBox.Header>
+                    <TextBlock Text="标题" />
+                </lay:LayGroupBox.Header>
+                <StackPanel Margin="10">
+                    <TextBlock
+                        Margin="2"
+                        Text="卡片式面板面板通常用于非白色背景色的主体内"
+                        TextTrimming="CharacterEllipsis"
+                        TextWrapping="WrapWithOverflow" />
+                    <TextBlock
+                        Margin="2"
+                        Text="从而映衬出边框投影"
+                        TextTrimming="CharacterEllipsis"
+                        TextWrapping="WrapWithOverflow" />
+                </StackPanel>
+            </lay:LayGroupBox>
+        </lay:LayCard>
+        <lay:LayCard Margin="5" Classes="anim zoom">
             <lay:LayGroupBox>
                 <lay:LayGroupBox.Header>
                     <TextBlock Text="标题" />
