--- a/src/LayuiAvaloniaPack/Code/Layui.Main/Views/MainWindow.axaml
+++ b/src/LayuiAvaloniaPack/Code/Layui.Main/Views/MainWindow.axaml
@@ -17,7 +17,7 @@
     d:DesignHeight="1080"
     d:DesignWidth="1920"
     Background="Transparent"
-    FontFamily="avares://LayuiApp.Desktop/Assets/Fonts/微软雅黑.ttf#Microsoft YaHei"
+    FontFamily="Microsoft YaHei"
     Icon="avares://LayuiApp.Desktop/Assets/AvaloniaLogo.png"
     SystemDecorations="None"
     TransparencyBackgroundFallback="Transparent"
